--- a/TheBridge/index.html
+++ b/TheBridge/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="TheBridge/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet" />
     <title> Blog</title>
