--- a/TheBridge/index.html
+++ b/TheBridge/index.html
@@ -22,11 +22,10 @@
            
     
         </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search">
-
+         <div class="search-bar">
+            <button title="Voice Search"><i class="fas fa-microphone"></i></button> <input type="text" placeholder="Search">
             <button title="Search"><i class="fas fa-search"></i></button>
-        </div>
+          </div>
     </div>
 
     <div class="container">
