--- a/TheBridge/home.html
+++ b/TheBridge/home.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <script src="chat.js"></script> </body>
+    <script src="chat.js"></script> 
     <div class="header">
         <div class="logo">
             <h1>TheBridge</h1>
