--- a/TheBridge/index.html
+++ b/TheBridge/index.html
@@ -21,7 +21,7 @@
 
     <footer class="footer">
         <div class="footer-profile">
-            <img src="/images/pfp.jpeg" alt="Profile Picture">
+            <img src="./images/pfp.jpeg" alt="Profile Picture">
             
             <span>lunar</span>
         </div>
